<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_details">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/ff">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profile_photo_placeholder"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.30"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.298" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10sp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                />
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_below="@+id/_name"
                app:drawableLeftCompat="@drawable/person_24"
                android:drawablePadding="10dp"
                android:background="@drawable/text_lines"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/_phoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNo"
                android:layout_marginTop="20sp"/>

            <TextView
                android:id="@+id/phoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phoneNo"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_below="@id/_phoneNo"
                app:drawableLeftCompat="@drawable/phone_24"
                android:drawablePadding="10dp"
                android:background="@drawable/text_lines"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/_emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:layout_marginTop="20sp"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_below="@id/_emailid"
                app:drawableLeftCompat="@drawable/email_24"
                android:drawablePadding="10dp"
                android:background="@drawable/text_lines"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/_profileid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "@string/profile_id"
                android:layout_marginTop="20sp" />

            <TextView
                android:id="@+id/profileid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_id"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_below="@id/_profileid"
                app:drawableLeftCompat="@drawable/p_id"
                android:drawablePadding="10dp"
                android:background="@drawable/text_lines"/>
        </RelativeLayout>

        <android.widget.Button
            android:id="@+id/G_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_google"
            android:text="@string/sign_out"
            android:textColor="@color/white"
            android:inputType="textCapSentences"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:textSize="20sp"
            android:drawableLeft="@drawable/google_icon"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:drawableStart="@drawable/google_icon"
            />

        <android.widget.Button
            android:id="@+id/F_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_fb"
            android:text="@string/sign_out"
            android:textColor="@color/com_facebook_blue"
            android:inputType="textCapSentences"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:drawableLeft="@drawable/fb_logo"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:layout_marginTop="45dp"
            android:drawableStart="@drawable/fb_logo" />

    </LinearLayout>

</LinearLayout>